--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Roseflix",
-	"short_name": "Roseflix",
+	"name": "SVFlix",
+	"short_name": "SVFlix",
 	"icons": [
 		{
 			"src": "/android-chrome-192x192.png",
